26) kernel: ralink wifi: 7610: for all mcs <= 9 need use 1T1R mode rate table.<br>
27) kernel: ralink wifi: 7610: cleanup VHT_IE if legacy client connect.<br>
28) kernel: ralink wifi: xxxx: fix potentional null pointer dereference in WMM processing.<br>
29) kernel: ralink wifi: xxxx: add NoForwardingMBCast option for isolate client2client BCAST traffic.<br>
30) kernel: ralink_gpio: fix use gpio pins shared with extphy/pa.<br>
31) kernel: ralink_arch: NR_IRQS is no longer dependent from BITS_PER_LONG.<br>
32) kernel: mips: irq: use DECLARE_BITMAP.<br>
33) kernel: mips: bmips: fix bmips_wr_vec().<br>
34) kernel: mips: adjust mips highmem offset to avoid the need for -mlong-calls on systems with >256M RAM.<br>
35) kernel: mips: c-r4k: fix typo in probe_scache().<br>
36) kernel: mips: fix enabling of DEBUG_STACKOVERFLOW.<br>
37) kernel: jhash: update jhash_[321]words functions to use correct initval.<br>
38) kernel: sfhash: add generic inline helper for more gcc optimize effect.<br>
39) kernel: mm: use clear_page_mlock() in page_remove_rmap().<br>
40) kernel: mm: remove free_page_mlock.<br>
41) kernel: mm: remove unevictable_pgs_mlockfreed.<br>
42) kernel: net: udp: fix behavior of wrong checksums.<br>
43) kernel: net: bridge: fix multicast router rlist endless loop.<br>
<br>
<br>
<b>TODO:</b><br>
1) need add in wireless->basic->SSID Settings NoForwardingMBCast option (this option isolate client2client BCAST traffic) per bssid (; as divider).<br>
2) need add in wireless->advanced MaxStaNum (range 1..MAX_NUMBER_OF_MAC, see oid.h) per bssid (; as divider).<br>
3) need add in wireless->advanced StationKeepAlive (range 10..300sec) per bssid (; as divider).<br>
4) need add in wireless->advances IdleTimeout (range 60..300sec).<br>
5) need limit wds and bssid num = 4.<br>
6) need expand AutoChannelSel to add mode 2 and set by default if autoselect enabled (1 - select channel by STA count now default, 2 - select channel by rssi).<br>
7) full russian ui (work end ~90%).<br>