@@ -1796,6 +1796,7 @@ CONFIG_MT76X2_AP_80211AC_VHT=y
 # CONFIG_MT76X2_AP_MC_SUPPORT is not set
 # CONFIG_MT76X2_AP_ATE is not set
 CONFIG_MT76X2_AP_IAPP=y
+CONFIG_MT76X2_AP_INTERFERENCE_REDUCE=y
 # CONFIG_MT76X2_AP_DBG is not set
 
 #
