@@ -284,7 +284,7 @@ ifeq ($(CONFIG_EXTERNAL_PA_EXTERNAL_LNA),y)
 EXTRA_CFLAGS += -DRT6352_EP_SUPPORT -DRT6352_EL_SUPPORT
 endif
 ifeq ($(CONFIG_RT2860V2_AP_INTERFERENCE_REDUCE),y)
-EXTRA_CFLAGS += -DMICROWAVE_OVEN_SUPPORT -DDYNAMIC_VGA_SUPPORT
+EXTRA_CFLAGS += -DMICROWAVE_OVEN_SUPPORT
 endif
 endif
 
