@@ -186,6 +186,11 @@ config  MT76X2_AP_IAPP
 	depends on MT76X2_AP
 	default n
 
+config  MT76X2_AP_INTERFERENCE_REDUCE
+	bool "Enable minimize 802.11 interference effects"
+	default n
+	depends on RT2860V2_AP
+
 config  MT76X2_AP_DBG
 	bool "Debug support for AP mode"
 	depends on MT76X2_AP
