@@ -257,6 +257,10 @@ EXTRA_CFLAGS += -DSPECIFIC_TX_POWER_SUPPORT
 EXTRA_CFLAGS += -DRTMP_TEMPERATURE_TX_ALC
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
 
+ifeq ($(CONFIG_MT76X2_AP_INTERFERENCE_REDUCE),y)
+EXTRA_CFLAGS += -DMICROWAVE_OVEN_SUPPORT
+endif
+
 ifeq ($(CONFIG_MT76X2_AP_IAPP),y)
 # provide roaming support
 EXTRA_CFLAGS += -DIAPP_SUPPORT
