@@ -364,8 +364,7 @@ DisassocFloodThreshold=64
 DeauthFloodThreshold=64
 EapReqFooldThreshold=64
 StreamMode=0
-MO_FalseCCATh=600
-MO_LowFalseCCATh=100
+MO_FalseCCATh=800
 DyncVgaEnable=1
 lltdEnabled=1
 lldpdEnabled=0
